--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "pug": "^3.0.3"
